--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <script>
     const questions = [
-      { question: 'Where is your dog?', options: ['Berlin', 'Madrid', 'Paris', 'Rome'], correctAnswer: 'Paris' },
+      { question: 'What is the capital of France?', options: ['Berlin', 'Madrid', 'Paris', 'Rome'], correctAnswer: 'Paris' },
       { question: 'What is your favourite food?', options: ['Beans', 'Garri', 'oil', 'fish'], correctAnswer: 'fish' },
       // Add more questions as needed
     ];
