--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ input[type="text"]:focus {
 
   <script>
     const questions = [
-      { question: 'Scenario: A designer is working on a new website and wants to ensure optimal user interaction pace. Which UI/UX principle should they consider, and what is the specific threshold mentioned?', type:`multiple-choice`, options: [`Fitts's Law- 200ms`, `Doherty Threshold-400ms`, `Hick's Law-600ms`, `Law of Proximity-300ms`], correctAnswer: 'Doherty Threshold-400ms' },
+      { question: 'Scenario: A designer is working on a new website and wants to ensure optimal user interaction pace. Which UI/UX principle should they consider, and what is the specific threshold mentioned?', type:`multiple-choice`, options: [`A) Fitts's Law- 200ms`, `B) Doherty Threshold-400ms`, `C) Hick's Law-600ms`, `D) Law of Proximity-300ms`], correctAnswer: 'Doherty Threshold-400ms' },
       { question: 'Scenario: A team is designing a navigation menu for an e-commerce website. Which law suggests that users prefer the site to be designed similarly to other sites they use?',type:`multiple-choice`, options: ['A) Law of Similarity', `C) Jacob's Law`, `D) Pareto Principle`, `B) Aesthetic-Usability Effect`], correctAnswer: `C) Jacob's Law` },
       { question: 'Scenario: A designer is working on the visual elements of a website to enhance its usability. Which principle indicates that users perceive visually pleasing sites as more usable?', type:`multiple-choice`, options: [`A)Law of Prägnanz`, `B) Aesthetic-Usability Effect`, `C) Fitts’s Law` , `D) Miller’s Law`], correctAnswer: `B) Aesthetic-Usability Effect`
       },
@@ -159,7 +159,7 @@ input[type="text"]:focus {
       },
 
       {question:`Scenario: A team is designing a mobile app, and they want to optimize touch interaction. Which law suggests that the time to acquire a target is a function of the distance to and size of the target?`, type:'multiple-choice',
-        options:[`A) Doherty Threshold`,`Fitts's Law`,`Law of Similarity`,`Law of Prägnanz`],
+        options:[`A) Doherty Threshold`,`B) Fitts's Law`,`C) Law of Similarity`,`D) Law of Prägnanz`],
         correctAnswer:`B) Fitts's Law`
 
       },
