--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@ input[type="text"]:focus {
 
   <script>
     const questions = [
-      { question: 'Scenario: A designer is working on a new website and wants to ensure optimal user interaction pace. Which UI/UX principle should they consider, and what is the specific threshold mentioned?', type:`multiple-choice`, options: [`A) Fitts's Law- 200ms`, `B) Doherty Threshold-400ms`, `C) Hick's Law-600ms`, `D) Law of Proximity-300ms`], correctAnswer: 'Doherty Threshold-400ms' },
+      { question: 'Scenario: A designer is working on a new website and wants to ensure optimal user interaction pace. Which UI/UX principle should they consider, and what is the specific threshold mentioned?', type:`multiple-choice`, options: [`A) Fitts's Law- 200ms`, `B) Doherty Threshold-400ms`, `C) Hick's Law-600ms`, `D) Law of Proximity-300ms`], correctAnswer: 'B) Doherty Threshold-400ms' },
       { question: 'Scenario: A team is designing a navigation menu for an e-commerce website. Which law suggests that users prefer the site to be designed similarly to other sites they use?',type:`multiple-choice`, options: ['A) Law of Similarity', `C) Jacob's Law`, `D) Pareto Principle`, `B) Aesthetic-Usability Effect`], correctAnswer: `C) Jacob's Law` },
       { question: 'Scenario: A designer is working on the visual elements of a website to enhance its usability. Which principle indicates that users perceive visually pleasing sites as more usable?', type:`multiple-choice`, options: [`A)Law of Prägnanz`, `B) Aesthetic-Usability Effect`, `C) Fitts’s Law` , `D) Miller’s Law`], correctAnswer: `B) Aesthetic-Usability Effect`
       },
       
-      { question:`Scenario: A designer wants to reduce decision-making time on a complex website. Which law suggests that the time it takes to make a decision increases with the number and complexity of choices?`, type:'multiple-choice' , options:[`A) Hick’s Law`,`B) Law of Proximity`, `C)Miller’s Law`, `D) Pareto Principle`],
+      { question:`Scenario: A designer wants to reduce decision-making time on a complex website. Which law suggests that the time it takes to make a decision increases with the number and complexity of choices?`, type:'multiple-choice' , options:[`A) Hick’s Law`,`B) Law of Proximity`, `C) Miller’s Law`, `D) Pareto Principle`],
       correctAnswer: `A) Hick's Law`
       },
 
