--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       margin: 20px;
       background-color: #000; 
       color: #fff; 
+      user-select: none;
     }
     #quiz-container {
       display: none;
