--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
+<?php 
+session_start();
+
+// Check if user has exceeded the attempt limit
+function checkAttempts() {
+    $ip = $_SERVER['REMOTE_ADDR'];
+
+    if (!isset($_SESSION['attempts'][$ip])) {
+        $_SESSION['attempts'][$ip] = 0;
+    }
+
+    return $_SESSION['attempts'][$ip] < 3; // Allow 3 attempts
+}
+
+// Increment attempt count
+function incrementAttempts() {
+    $ip = $_SERVER['REMOTE_ADDR'];
+
+    if (!isset($_SESSION['attempts'][$ip])) {
+        $_SESSION['attempts'][$ip] = 0;
+    }
+
+    $_SESSION['attempts'][$ip]++;
+}
+
+// Reset attempts (for testing purposes)
+function resetAttempts() {
+    $_SESSION['attempts'] = [];
+}
+
+// Get attempts count
+function getAttempts() {
+    $ip = $_SERVER['REMOTE_ADDR'];
+
+    if (!isset($_SESSION['attempts'][$ip])) {
+        $_SESSION['attempts'][$ip] = 0;
+    }
+
+    return $_SESSION['attempts'][$ip];
+}
+?>
+
+ ?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
+
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -132,7 +176,7 @@ input[type="text"]:focus {
     <button onclick="startQuiz()">Start Quiz</button>
   </div>
 
-  <div id="greeting-container" style=""></div><br>
+  <div id="greeting-container"></div><br>
 
   <div id="quiz-container">
     <div id="timer"></div>
@@ -147,6 +191,7 @@ input[type="text"]:focus {
     </div>
     <div id="answers-container"></div>
   </div>
+  <?php include 'quiz.php'; ?>
 
   <script>
     const questions = [
@@ -196,6 +241,10 @@ input[type="text"]:focus {
     let timer;
 
     function startQuiz() {
+      if(!checkAttempts()){
+        alert('You have exceeded the attempt limit.');
+        return;
+      }
       const name = document.getElementById('name').value;
 
       if (!name) {
@@ -209,6 +258,7 @@ input[type="text"]:focus {
 
       displayQuestion();
       startTimer();
+      incrementAttempts();
     }
 
     function displayQuestion() {
@@ -362,6 +412,8 @@ function nextQuestion() {
       document.getElementById('quiz-container').style.display = 'none';
       document.getElementById('result-container').style.display = 'block';
       document.getElementById('final-score').innerText = `${score}/${questions.length}`;
+
+      document.getElementById('attempts').innerText = `Number of attempts: ${getAttempts()}`;
 
       displayUserResponses();
       updateScore();
